# sql2oracle

./: .gitignore  .replit  CLAUDE.md  Oracle_Architecture_ProcessFlow_part_2_BACKUP.html  Procfile  app.py  assignments.html  index.html  oracle_12c_admin_complete_notes.md  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  vite.config.js
attached_assets/: Oracle_Architecture_ProcessFlow_part_2_1774379430447.html  Pasted-Navigation-Bar-New-static-nav-js-shared-nav-bar-injecte_1775517938665.txt
data/: projects.json  users.json
docs/superpowers/plans/: 2026-04-06-ui-upgrade-student-projects.md
docs/superpowers/specs/: 2026-04-06-ui-upgrade-student-projects-design.md
src/: main.js  style.css
static/: app.js  nav.js  style.css
templates/: architecture.html  index.html  login.html  projects.html  resources.html
